// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render BookmarkButton BookmarkButton for favorite order renders correctly 1`] = `
<button
  className="class1 button class1--active"
  onClick={[Function]}
  type="button"
>
  <div
    className="test1"
  >
    test1
  </div>
</button>
`;

exports[`Render BookmarkButton BookmarkButton for not favorite order renders correctly 1`] = `
<button
  className="class2 button "
  onClick={[Function]}
  type="button"
>
  <div
    className="test2"
  >
    test2
  </div>
  <div
    className="test3"
  >
    test3
  </div>
</button>
`;
